--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
 <body>
   <nav id="id"></nav>
   <noscript>this won't work without javascript, as evil as it is.</noscript>
+  <a href="https://github.com/desecaw13/cdn/">github repo</a>
 </body>
 </html>
